UHG_Dev/src/objects/Appointment__c.object
<CustomObject>
   <!--  <enableHistory>false</enableHistory> -->
    <fields>
        <fullName>Appointment_Status__c</fullName>
        <label>Appointment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contacts__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <label>Doctor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The doctor is not an approved doctor by the hospital and the doc&apos;s application has been submitted for approval process</errorMessage>
            <filterItems>
                <field>Doctor__c.Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <infoMessage>Please only select the approved doc</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Doctor__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <label>Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>prescriptions__c</fullName>
        <label>prescriptions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Appointment</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Appointment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>cease_prescription_and_fees_for_pending</fullName>
        <active>true</active>
        <errorConditionFormula>(
ISPICKVAL( Appointment_Status__c , &quot;New&quot;)  ||
ISPICKVAL( Appointment_Status__c , &quot;Pending&quot;) ||
ISPICKVAL( Appointment_Status__c , &quot;Rejected&quot;)
)
&amp;&amp;
(
(prescriptions__c != null ) ||
NOT(ISBLANK( Fees__c))
)</errorConditionFormula>
        <errorMessage>You cannot fill prescription or fees till your booking is confirmed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>prescription_and_next_visit_rule</fullName>
        <active>false</active>
        <errorConditionFormula>ISNULL(Fees__c)</errorConditionFormula>
        <errorMessage>the fees cannot be null</errorMessage>
    </validationRules>
</CustomObject>